@@ -38,7 +38,7 @@ ERROR_TOOL_AGENT_INVALID_PARAMETER_TYPE_SCHEMA_TYPE_REQUIRED = Neispravan tip pa
 
 ERROR_TOOL_AGENT_APP_NAME_EXTENDED_ATTRIBUTE_REQUIRED = Pro\u0161ireni atribut sa imenom "AppName" mora biti definisan
 
-ERROR_TOOL_AGENT_BSH_OR_JS_SCRIPT_PARAMETER_REQUIRED = Mora se definisati skript za interpretera (pro\u0161ireni atribut sa imenom "AppName" ili "Script" mora biti definisan)
+ERROR_TOOL_AGENT_BSH_OR_JS_SCRIPT_PARAMETER_REQUIRED = Mora se definisati skript za interpretera (formalni parametar sa Id-om "Script" ili pro\u0161ireni atribut sa imenom "AppName" ili "Script" mora biti definisan)
 
 ERROR_TOOL_AGENT_CHECK_DOCUMENT_FORMATS_MISSING_REQUIRED_PARAMETERS = Nedostaje neophodni formalni parametar. Parametri sa Id-om "ALLOWED_DOCUMENT_FORMATS" i "UNSUPPORTED_DOCUMENT_IDS" moraju biti definisani
 
